[package]
name = "harbor-sbom-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["erased-json"] }
base64 = "0.22.0"
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json", "rustls", "rustls-tls"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
snafu = "0.8.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
