[package]
name = "monitor-oci-artifacts"
description = "A tool to monitor Stackable's OCI artifacts. Currently it just checks whether a valid signature is present for each artifact."
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"

[dependencies]
regex = "1.10.3"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
